Move from the javax namespace to the jakarta namespace.  Upgrade libraries as necessary to support this move.